tests/invalid/import_from_inside_function/main.py
def main() -> None:
    from imports import module_a
